fix generate exam, update exam, update student for exam